--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,14 +110,14 @@
     <string name="word_title">Converter</string>
     <string name="word_continue">Continue</string>
     <string name="word_info">Convert to Word Document</string>
-    <string name="new_file_success">Creating Document Successfully</string>
+    <string name="new_file_success">New Document created Successfully</string>
     <string name="new_file_question">Do you want to create more Pdf ?</string>
     <string name="new_file_progress">Creating  File....</string>
     <string name="images_success">Converted Successfully</string>
     <string name="images_question">Do you want to convert more images?</string>
     <string name="images_progress">Converting Images.....</string>
     <string name="delete_file_title">Delete File</string>
-    <string name="delete_question">Are You Sure ?</string>
+    <string name="delete_question">Are You Sure to Delete ?</string>
     <string name="select_all">select all</string>
     <string name="deselect_all">deselect all</string>
     <string name="file_lock_info">This PDF file is protected. Please unlock it first</string>
@@ -131,4 +131,21 @@
     <string name="select_file">Select File</string>
     <string name="choose_atliest">Choose atleast one file</string>
     <string name="combine">Combine</string>
+    <string name="convert">Convert</string>
+    <string name="no_image_found">No image found in this file</string>
+    <string name="encrypted_dialog">Encrypting File....</string>
+    <string name="watermark_title">Watermark Pdf</string>
+    <string name="watermark_text">Enter Your Water Mark Signature</string>
+    <string name="watermark_success">Watermarked Successfully</string>
+    <string name="watermark_failed">Marking Failed</string>
+    <string name="merge_title">Pdf Merge</string>
+    <string name="merged_request">Please enter your file name</string>
+    <string name="merge_dialog">Combining Pdf....</string>
+    <string name="enter_file_name">Please enter file name</string>
+    <string name="pdf_convert_success">converted to pdf</string>
+    <string name="pdf_convert_failed">somethings wrong, try again!</string>
+    <string name="please_write_something">Please write something</string>
+    <string name="please_enter_file_name">Please enter your new file name</string>
+    <string name="file_not_protected">This PDF file is not password-protected</string>
+    <string name="file_is_protect">\"File is protected \"</string>
 </resources>
